test/conformance/chainsaw/globalcontext/validate-crd/multiple-resources.yaml
---
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: ingress-2
spec:
  apiCall:
    service:
      url: https://svc.kyverno/example
      caBundle: |-
        -----BEGIN CERTIFICATE-----
        -----REDACTED-----
        -----END CERTIFICATE-----
    refreshInterval: 10s
  kubernetesResource:
    group: apis/networking.k8s.io
    version: v1
    resource: ingresses
    namespace: apps
