test/conformance/chainsaw/globalcontext/validate-crd/no-resource.yaml
---
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: ingress
spec: {}
