test/conformance/chainsaw/globalcontext/validate-crd/valid-context.yaml
---
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: ingress
spec:
  apiCall:
    service:
      url: https://svc.kyverno/example
      caBundle: |-
        -----BEGIN CERTIFICATE-----
        -----REDACTED-----
        -----END CERTIFICATE-----
    refreshInterval: 10ns
