test/conformance/chainsaw/globalcontext/validate-crd/valid-context-assert.yaml
---
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: ingress
